--- a/iphone2.6/FounderReader-2.5/VideoTableCell.xib
+++ b/iphone2.6/FounderReader-2.5/VideoTableCell.xib
@@ -88,6 +88,14 @@
             </connections>
             <point key="canvasLocation" x="95" y="-217"/>
         </tableViewCell>
+        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="61V-S8-b4l">
+            <rect key="frame" x="0.0" y="0.0" width="42" height="21"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+            <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <nil key="highlightedColor"/>
+            <point key="canvasLocation" x="6" y="45"/>
+        </label>
     </objects>
     <resources>
         <image name="video_play" width="71" height="71"/>
